# -physical-ai-humanoid-robotics-book

./: .gitignore  404.html  GEMINI.md  README.md  index.html  sitemap.xml
.gemini/tmp/: docusaurus_placeholders_description.txt
.specify/memory/: constitution.md
assets/css/: styles.0b570e11.css
assets/js/: 003429c3.095b956a.js  00e5b18b.b4899de7.js  01bfc900.41a0e7a3.js  04711546.1c2dc8e3.js  04711546.c51b2c74.js  06afddb0.20353ba4.js  06afddb0.3a00fa63.js  08e48151.52059214.js  08e48151.a03d1d7b.js  0dae46d3.5a4252ac.js  0dae46d3.c3cf054f.js  14db11c8.5760febf.js  14db11c8.fd284cd1.js  17020ee3.100bb32d.js  170f041f.7c32d2d7.js  170f041f.f0f3529d.js  17d5012f.6180fc2f.js  17d5012f.ad4ae7ec.js  1df93b7f.41f6433c.js  1df93b7f.5a49b235.js  20511184.35f3d35b.js  23855780.6bd9effe.js  23855780.897b01b0.js  26d29268.24d3d84b.js  26d29268.68497c5d.js  29dbb267.1a44ec2b.js  29dbb267.beb07fb8.js  2ee704f8.002ef22c.js  2ee704f8.2882efc4.js  393be207.b087940e.js  3de8dabf.982d1533.js  3de8dabf.e3a1295f.js  43da6350.285edbd3.js  43da6350.5be558a6.js  44f96093.8e831531.js  44f96093.bd8dcfbc.js  4cb5caa0.393bfc9f.js  4cb5caa0.57a16d77.js  (+54 more)
blog/: atom.xml  index.html  rss.xml
markdown-page/: index.html
src/ros2_foundations/: package.xml  setup.py
src/ros2_foundations/launch/: visualize.launch.py
src/ros2_foundations/ros2_foundations/: ai_bridge.py  control_loop.py  listener.py  talker.py
src/ros2_foundations/rviz/: urdf_config.rviz
src/ros2_foundations/tests/: test_talker.py
src/ros2_foundations/urdf/: humanoid.urdf
website/: docusaurus.config.ts
(+102 files in other folders)
